create login page and router

--- a/My-Web/src/app/app.component.html
+++ b/My-Web/src/app/app.component.html
@@ -1,9 +1,12 @@
 <header>
+  <app-navbar-page></app-navbar-page>
 </header>
-<body>
-  <div class="login-page">
-    <app-login-page></app-login-page>
-  </div>
-</body>
+
+  <body>
+      <div class="login-page">
+        <app-login-page></app-login-page>
+      </div>
+  </body>
+
 <footer>
 </footer>
