--- a/My-Web/src/app/app.component.scss
+++ b/My-Web/src/app/app.component.scss
@@ -1,11 +1,12 @@
 body
 {
-    height: 1000px;
+    height: 1089px;
+    // background-color: aqua;
 }
 .login-page
 {
     width: 350px;
-    padding-top: 20%;
+    padding-top: 15%;
     margin-left: 40%;
 }
 header
@@ -14,5 +15,5 @@ header
 }
 footer
 {
-
+    background-color: bisque;
 }
